# hstest

./: .gitignore  README.md
Test1/: Attribute.hs  CSVCommon.hs  Main.hs  NCConst.hs  ObjectType.hs  Test1.cabal  Test1.lkshs  Test1.lkshw
Test1/samples/: attr_groups.csv  object_types.csv
Test2/: Jira.hs  JiraWeb.hs  Main.hs  NC.csv  TC.csv  Test2.cabal  Test2.lkshs  Test2.lkshw  test.json
