name: Test1
version: 0.1.0.0
cabal-version: >=1.8
build-type: Simple
license: GPL-3
license-file: LICENSE
maintainer: omever@gmail.com
description:  
author: GK
data-dir: ""
 
executable Test1
    build-depends: base ==4.6.*, csv ==0.1.*, parsec ==3.1.*
    main-is: Main.hs
    buildable: True
    hs-source-dirs: .
 